--- a/view.html
+++ b/view.html
@@ -1,5 +1,20 @@
-<h1>{{.Title}}</h1>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>Sample</title>
+    <meta name="viewport" content="width=device-width. initial-scale=1.0"> 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+<body>
+    <section class="conA">
+        <div class="container">
+            <h1>{{.Title}}</h1>
+            <p>{{printf "%s" .Body}}</p>
+            <a href="/edit/{{.Title}}">Edit</a>
+        </div>
+    </section>
+    
+</body>
 
-<p>[<a href="/edit/{{.Title}}">Edit</a>]</p>
-
-<div>{{printf "%s" .Body}}</div>
+</html>
